--- a/livetv.html
+++ b/livetv.html
@@ -184,14 +184,16 @@ window.onclick = function(event) {
 
 <div class='ob'>
      <h1 class='Nashi_horse'>Прямой эфир интернет-телеканала:<h1>
-     <!-- <mark>Интернет-канал сейчас ничего не вещает</mark>
-     <p>Запись вещания:</p> -->
+     <mark>Интернет-канал сейчас ничего не вещает</mark>
+     <p>Запись вещания:</p>
      <div class="video">
           <iframe width="720" height="405" src="https://rutube.ru/play/embed/e69958014829b5b32210127e3d1fa17d/?skinColor=8e24aa" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание на 20.09.2024</b>
-        <p>С 9:20 МСК:</p>
+        <b>Расписание на 21.09.2024</b>
+        <p>11:00 МСК:</p>
+        <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
+        <p>С 11:02 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 2 серия.</p>
@@ -200,18 +202,16 @@ window.onclick = function(event) {
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>11:27 МСК:</p>
+        <p>13:07 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>11:50 МСК:</p>
+        <p>13:30 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>12:15 МСК:</p>
+        <p>13:55 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>15:05 МСК:</p>
+        <p>19:05 МСК:</p>
         <p>"ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>17:20 МСК:</p>
-        <p>Там, где горы встречаются с морем <mark>По пятницам</mark></p>
-        <p>18:00 МСК:</p>
-        <p>Продолжение вещания</p></div>
+        <p>19:30 МСК:</p>
+        <p>Продолжение вещания</p>
      </div>
 </div>
   </div><!-- /.entry-content -->
