--- a/livetv.html
+++ b/livetv.html
@@ -184,16 +184,14 @@ window.onclick = function(event) {
 
 <div class='ob'>
      <h1 class='Nashi_horse'>Прямой эфир интернет-телеканала:<h1>
-     <!-- <mark>Интернет-канал сейчас ничего не вещает</mark>
-     <p>Запись вещания:</p> -->
+     <mark>Интернет-канал сейчас ничего не вещает</mark>
+     <p>Запись вещания:</p>
      <div class="video">
           <iframe width="720" height="405" src="https://rutube.ru/play/embed/23f9425863f75daf880bb821945adfae/?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание на 21.09.2024</b>
-        <p>11:00 МСК:</p>
-        <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
-        <p>С 11:02 МСК:</p>
+        <b>Расписание на 22.09.2024</b>
+        <p>С 11:00 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 2 серия.</p>
@@ -208,10 +206,12 @@ window.onclick = function(event) {
         <p>- К/Ф "Карачун"</p>
         <p>13:55 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>19:05 МСК:</p>
+        <p>16:45 МСК:</p>
         <p>"ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>19:30 МСК:</p>
-        <p>Продолжение вещания</p>
+        <p>18:00 МСК:</p>
+        <p>Реальность полёта <mark>По воскресеньям</mark></p>
+        <p>18:40 МСК:</p>
+        <p>Продолжение вещания</p></div>
      </div>
 </div>
   </div><!-- /.entry-content -->
