--- a/index.html
+++ b/index.html
@@ -187,11 +187,11 @@ window.onclick = function(event) {
 
 <div class="title1">
 		<b>Прямой эфир телеканала</b><br>
-		<mark>Интернет-канал сейчас ничего не вещает</mark><br>
-		<mark>Запись вещания:</mark>
+		<!-- <mark>Интернет-канал сейчас ничего не вещает</mark><br>
+		<mark>Запись вещания:</mark> -->
 </div>
 <div class="video">
-	<iframe width="720" height="405" src="https://rutube.ru/play/embed/4132451a8ac815a2bcea806a5fc481fe/?skinColor=8e24aa" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+	<iframe width="720" height="405" src="https://rutube.ru/play/embed/22a783ae08d87e20c112f1cfdf98fcd8/?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 
 </div>
 <div class="title1">
