--- a/index.html
+++ b/index.html
@@ -191,7 +191,8 @@ window.onclick = function(event) {
 		<mark>Запись вещания:</mark> -->
 </div>
 <div class="video">
-	<iframe width="720" height="405" src="https://rutube.ru/play/embed/22a783ae08d87e20c112f1cfdf98fcd8/?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+	<iframe width="560" height="315" src="https://nuum.ru/embed/record/3472716" title="Nuum video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+	<!-- <iframe width="720" height="405" src="https://rutube.ru/play/embed/4132451a8ac815a2bcea806a5fc481fe/?skinColor=8e24aa" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe> -->
 
 </div>
 <div class="title1">
