--- a/livetv.html
+++ b/livetv.html
@@ -187,7 +187,7 @@ window.onclick = function(event) {
      <!-- <mark>Интернет-канал сейчас ничего не вещает</mark>
      <p>Запись вещания:</p> -->
      <div class="video">
-          <iframe width="720" height="405" src="https://rutube.ru/play/embed/22a783ae08d87e20c112f1cfdf98fcd8/?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+          <iframe width="560" height="315" src="https://nuum.ru/embed/record/3472716" title="Nuum video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
      </div>
      <div class="title1">
         <b>Расписание на 23.09.2024</b>
