--- a/livetv.html
+++ b/livetv.html
@@ -184,13 +184,13 @@ window.onclick = function(event) {
 
 <div class='ob'>
      <h1 class='Nashi_horse'>Прямой эфир интернет-телеканала:<h1>
-     <!-- <mark>Интернет-канал сейчас ничего не вещает</mark>
-     <p>Запись вещания:</p> -->
+     <mark>Интернет-канал сейчас ничего не вещает</mark>
+     <p>Запись вещания:</p>
      <div class="video">
           <iframe width="720" height="405" src="https://rutube.ru/play/embed/04dc95ed8da998dd4925d3f61fef77c7/?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание на 24.09.2024</b>
+        <b>Расписание на 25.09.2024</b>
         <p>8:00 МСК:</p>
         <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
         <p>С 8:02 МСК:</p>
