--- a/index.html
+++ b/index.html
@@ -187,18 +187,16 @@ window.onclick = function(event) {
 
 <div class="title1">
 		<b>Прямой эфир телеканала</b><br>
-		<!-- <mark>Интернет-телеканал сейчас ничего не вещает</mark><br>
-		<mark>Запись вещания:</mark> -->
+		<mark>Интернет-телеканал сейчас ничего не вещает</mark><br>
+		<mark>Запись вещания:</mark>
 </div>
 <div class="video">
 	<iframe width="720" height="405" src="https://rutube.ru/play/embed/4bb7a7c8a49d4feb42910966a907b536/?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 
 </div>
 <div class="title1">
-		<b>Расписание на 25.09.2024</b>
-        <p>8:00 МСК:</p>
-        <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
-        <p>С 8:02 МСК:</p>
+		<b>Расписание на 27.09.2024</b>
+        <p>С 9:00 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 2 серия.</p>
@@ -207,16 +205,18 @@ window.onclick = function(event) {
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>10:07 МСК:</p>
+        <p>11:07 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>10:30 МСК:</p>
+        <p>11:30 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>10:55 МСК:</p>
+        <p>11:55 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>16:05 МСК:</p>
+        <p>14:45 МСК:</p>
         <p>"ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>16:30 МСК:</p>
-        <p>Продолжение вещания</p>
+        <p>17:00 МСК:</p>
+        <p>Там, где горы встречаются с морем <mark>По пятницам</mark></p>
+        <p>17:40 МСК:</p>
+        <p>Продолжение вещания</p></div>
 <!-- <div class="photo"><img src="/theme/images/Rpr29qovqzc.jpg"></div> -->
 <div class="Opros">
 	<!-- <iframe src="https://yandex.ru/chat#/join/0e0da34c-6352-4b74-8963-4b8d612868df/1717604674945027" width="850" height="478" allow="autoplay; encrypted-media; fullscreen; picture-in-picture;" frameborder="0" allowfullscreen></iframe> -->
