--- a/livetv.html
+++ b/livetv.html
@@ -184,10 +184,10 @@ window.onclick = function(event) {
 
 <div class='ob'>
      <h1 class='Nashi_horse'>Прямой эфир интернет-телеканала:<h1>
-     <mark>Интернет-телеканал сейчас ничего не вещает</mark>
-     <p>Запись вещания:</p>
+     <!-- <mark>Интернет-телеканал сейчас ничего не вещает</mark>
+     <p>Запись вещания:</p> -->
      <div class="video">
-          <iframe width="720" height="405" src="https://rutube.ru/play/embed/4bb7a7c8a49d4feb42910966a907b536/?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+          <iframe width="720" height="405" src="https://rutube.ru/play/embed/04cbafccc281dd3fd648a62356e4aa89/?skinColor=8e24aa" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
      </div>
      <div class="title1">
         <b>Расписание на 27.09.2024</b>
