--- a/livetv.html
+++ b/livetv.html
@@ -187,7 +187,7 @@ window.onclick = function(event) {
      <!-- <mark>Интернет-телеканал сейчас ничего не вещает</mark>
      <p>Запись вещания:</p> -->
      <div class="video">
-          <iframe width="720" height="405" src="https://rutube.ru/play/embed/04cbafccc281dd3fd648a62356e4aa89/?skinColor=8e24aa" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+          <iframe width="720" height="405" src="https://rutube.ru/play/embed/1d157fb7d2c703878fddd0b5a2be844b/?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
      </div>
      <div class="title1">
         <b>Расписание на 28.09.2024</b>
