--- a/index.html
+++ b/index.html
@@ -191,14 +191,12 @@ window.onclick = function(event) {
 		<mark>Запись вещания:</mark> -->
 </div>
 <div class="video">
-	<iframe width="720" height="405" src="https://rutube.ru/play/embed/1d157fb7d2c703878fddd0b5a2be844b/?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+	<iframe width="720" height="405" src="https://rutube.ru/play/embed/eb70974eef174326e399d2b97a33bf14/?skinColor=8e24aa" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 
 </div>
 <div class="title1">
-		<b>Расписание на 28.09.2024</b>
-        <p>7:40 МСК:</p>
-        <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
-        <p>С 7:42 МСК:</p>
+		<b>Расписание на 29.09.2024</b>
+        <p>С 11:00 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 2 серия.</p>
@@ -207,16 +205,18 @@ window.onclick = function(event) {
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>9:47 МСК:</p>
+        <p>13:07 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>9:10 МСК:</p>
+        <p>13:30 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>10:35 МСК:</p>
+        <p>13:55 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>15:45 МСК:</p>
+        <p>16:45 МСК:</p>
         <p>"ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>16:10 МСК:</p>
-        <p>Продолжение вещания</p>
+        <p>18:00 МСК:</p>
+        <p>Реальность полёта <mark>По воскресеньям</mark></p>
+        <p>18:40 МСК:</p>
+        <p>Продолжение вещания</p></div>
 <!-- <div class="photo"><img src="/theme/images/Rpr29qovqzc.jpg"></div> -->
 <div class="Opros">
 	<!-- <iframe src="https://yandex.ru/chat#/join/0e0da34c-6352-4b74-8963-4b8d612868df/1717604674945027" width="850" height="478" allow="autoplay; encrypted-media; fullscreen; picture-in-picture;" frameborder="0" allowfullscreen></iframe> -->
