--- a/index.html
+++ b/index.html
@@ -187,11 +187,11 @@ window.onclick = function(event) {
 
 <div class="title1">
 		<b>Прямой эфир телеканала</b><br>
-		<mark>Интернет-телеканал сейчас ничего не вещает</mark><br>
-		<mark>Запись вещания:</mark>
+		<!-- <mark>Интернет-телеканал сейчас ничего не вещает</mark><br>
+		<mark>Запись вещания:</mark> -->
 </div>
 <div class="video">
-	<iframe width="720" height="405" src="https://rutube.ru/play/embed/eb70974eef174326e399d2b97a33bf14/?skinColor=8e24aa" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+	<iframe width="720" height="405" src="https://rutube.ru/play/embed/c60848d3d57ab39e9d83bf9b23683f9e/?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 
 </div>
 <div class="title1">
