--- a/livetv.html
+++ b/livetv.html
@@ -187,7 +187,7 @@ window.onclick = function(event) {
      <!-- <mark>Интернет-телеканал сейчас ничего не вещает</mark>
      <p>Запись вещания:</p> -->
      <div class="video">
-          <iframe width="720" height="405" src="https://rutube.ru/play/embed/1afcecade1965ac498169db4517191f6/?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+          <iframe width="560" height="315" src="https://nuum.ru/embed/streams/3552192" title="Nuum video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
      </div>
      <div class="title1">
         <b>Расписание на 02.10.2024</b>
