--- a/livetv.html
+++ b/livetv.html
@@ -184,16 +184,14 @@ window.onclick = function(event) {
 
 <div class='ob'>
      <h1 class='Nashi_horse'>Прямой эфир интернет-телеканала:<h1>
-     <!-- <mark>Интернет-телеканал сейчас ничего не вещает</mark>
-     <p>Запись вещания:</p> -->
+     <mark>Интернет-телеканал сейчас ничего не вещает</mark>
+     <p>Запись вещания:</p>
      <div class="video">
-          <iframe width="560" height="315" src="https://nuum.ru/embed/streams/3552212" title="Nuum video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe width="720" height="405" src="https://rutube.ru/play/embed/1afcecade1965ac498169db4517191f6/?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание на 02.10.2024</b>
-        <p>7:30 МСК:</p>
-        <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
-        <p>С 7:32 МСК:</p>
+        <b>Расписание на 04.10.2024</b>
+        <p>С 9:00 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 2 серия.</p>
@@ -202,16 +200,18 @@ window.onclick = function(event) {
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>9:37 МСК:</p>
+        <p>11:07 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>10:00 МСК:</p>
+        <p>11:30 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>10:25 МСК:</p>
+        <p>11:55 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>15:35 МСК:</p>
+        <p>14:45 МСК:</p>
         <p>"ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>15:55 МСК:</p>
-        <p>Продолжение вещания</p>
+        <p>17:00 МСК:</p>
+        <p>Там, где горы встречаются с морем <mark>По пятницам</mark></p>
+        <p>17:40 МСК:</p>
+        <p>Продолжение вещания</p></div>
      </div>
 </div>
   </div><!-- /.entry-content -->
