--- a/livetv.html
+++ b/livetv.html
@@ -191,26 +191,33 @@ window.onclick = function(event) {
      </div>
      <div class="title1">
         <b>Расписание на 04.10.2024</b>
-        <p>С 9:00 МСК:</p>
+        <p> 8:00 МСК:</p>
+        <p>"ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>8:20 МСК:</p>
+        <p>- "Импульс - шаг в будущее"</p>
+        <p>С 8:40 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 2 серия.</p>
         <p>- Короткометражный фильм "СДЕЛКА".</p>
         <p>- Велопрогулка по Подмосковью - Люберцы</p>
+        <p>10:07 МСК:</p>
+        <p>- К/Ф "ЭГО"</p>
+        <p>10:30 МСК:</p>
+        <p>- К/Ф "Карачун"</p>
+        <p>13:05 МСК:</p>
+        <p>"ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>С 13:25 МСК:</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>11:07 МСК:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>11:30 МСК:</p>
-        <p>- К/Ф "Карачун"</p>
-        <p>11:55 МСК:</p>
+        <p>13:40 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>14:45 МСК:</p>
+        <p>14:55 МСК:</p>
         <p>"ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>17:00 МСК:</p>
+        <p>17:10 МСК:</p>
         <p>Там, где горы встречаются с морем <mark>По пятницам</mark></p>
-        <p>17:40 МСК:</p>
+        <p>17:50 МСК:</p>
         <p>Продолжение вещания</p></div>
      </div>
 </div>
