--- a/index.html
+++ b/index.html
@@ -187,11 +187,11 @@ window.onclick = function(event) {
 
 <div class="title1">
 		<b>Прямой эфир телеканала</b><br>
-		<mark>Интернет-телеканал сейчас ничего не вещает</mark><br>
-		<mark>Запись вещания:</mark>
+		<!-- <mark>Интернет-телеканал сейчас ничего не вещает</mark><br>
+		<mark>Запись вещания:</mark> -->
 </div>
 <div class="video">
-	<iframe width="720" height="405" src="https://rutube.ru/play/embed/1afcecade1965ac498169db4517191f6/?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+	<iframe width="720" height="405" src="https://rutube.ru/play/embed/ea3b3a7b332310243ce7f372282e3880/?skinColor=8e24aa" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 
 </div>
 <div class="title1">
