--- a/livetv.html
+++ b/livetv.html
@@ -184,10 +184,10 @@ window.onclick = function(event) {
 
 <div class='ob'>
      <h1 class='Nashi_horse'>Прямой эфир интернет-телеканала:<h1>
-     <mark>Интернет-телеканал сейчас ничего не вещает</mark>
-     <p>Запись вещания:</p>
+     <!-- <mark>Интернет-телеканал сейчас ничего не вещает</mark>
+     <p>Запись вещания:</p> -->
      <div class="video">
-          <iframe width="720" height="405" src="https://rutube.ru/play/embed/1afcecade1965ac498169db4517191f6/?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+          <iframe width="720" height="405" src="https://rutube.ru/play/embed/ea3b3a7b332310243ce7f372282e3880/?skinColor=8e24aa" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
      </div>
      <div class="title1">
         <b>Расписание на 04.10.2024</b>
