--- a/index.html
+++ b/index.html
@@ -187,18 +187,20 @@ window.onclick = function(event) {
 
 <div class="title1">
 		<b>Прямой эфир телеканала</b><br>
-		<mark>Интернет-телеканал сейчас ничего не вещает</mark><br>
+		<!-- <mark>Интернет-телеканал сейчас ничего не вещает</mark><br> -->
 		<!-- <mark>Запись вещания:</mark> -->
 </div>
 <div class="video">
-	<iframe width="560" height="315" src="https://nuum.ru/embed/streams/3568531" title="Nuum video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+	<iframe src="https://vk.ru/video_ext.php?oid=-214689242&id=456239082&autoplay=1" width="426" height="240" allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
 
 </div>
 <div class="title1">
 		<b>Расписание на 05.10.2024</b>
         <p>8:00 МСК:</p>
         <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
-        <p>С 8:02 МСК:</p>
+        <p>8:02 МСК:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>С 8:20 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 2 серия.</p>
