--- a/livetv.html
+++ b/livetv.html
@@ -184,10 +184,10 @@ window.onclick = function(event) {
 
 <div class='ob'>
      <h1 class='Nashi_horse'>Прямой эфир интернет-телеканала:<h1>
-     <mark>Интернет-телеканал сейчас ничего не вещает</mark>
+     <!-- <mark>Интернет-телеканал сейчас ничего не вещает</mark> -->
      <!-- <p>Запись вещания:</p> -->
      <div class="video">
-          <iframe width="560" height="315" src="https://nuum.ru/embed/streams/3568531" title="Nuum video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe src="https://vk.ru/video_ext.php?oid=-214689242&id=456239082&autoplay=1" width="426" height="240" allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
      </div>
      <div class="title1">
         <b>Расписание на 05.10.2024</b>
