--- a/livetv.html
+++ b/livetv.html
@@ -191,9 +191,11 @@ window.onclick = function(event) {
      </div>
      <div class="title1">
         <b>Расписание на 05.10.2024</b>
-        <p>8:00 МСК:</p>
+        <p>11:00 МСК:</p>
         <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
-        <p>С 8:02 МСК:</p>
+        <p>11:02 МСК:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>С 11:20 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 2 серия.</p>
@@ -202,15 +204,15 @@ window.onclick = function(event) {
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>10:07 МСК:</p>
+        <p>13:27 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>10:30 МСК:</p>
+        <p>13:50 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>10:55 МСК:</p>
+        <p>14:15 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>16:05 МСК:</p>
+        <p>18:25 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>16:30 МСК:</p>
+        <p>18:50 МСК:</p>
         <p>Продолжение вещания</p>
      </div>
 </div>
