--- a/index.html
+++ b/index.html
@@ -191,16 +191,16 @@ window.onclick = function(event) {
 		<!-- <mark>Запись вещания:</mark> -->
 </div>
 <div class="video">
-	<iframe src="https://vk.ru/video_ext.php?oid=-214689242&id=456239082&autoplay=1" width="426" height="240" allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
+	<iframe src="https://vk.ru/video_ext.php?oid=-214689242&id=456239082&autoplay=1" width="426" height="240" allow=" encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
 
 </div>
 <div class="title1">
 		<b>Расписание на 05.10.2024</b>
-        <p>8:00 МСК:</p>
+        <p>11:00 МСК:</p>
         <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
-        <p>8:02 МСК:</p>
+        <p>11:02 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>С 8:20 МСК:</p>
+        <p>С 11:20 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 2 серия.</p>
@@ -209,15 +209,15 @@ window.onclick = function(event) {
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>10:07 МСК:</p>
+        <p>13:27 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>10:30 МСК:</p>
+        <p>13:50 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>10:55 МСК:</p>
+        <p>14:15 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>16:05 МСК:</p>
+        <p>18:25 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>16:30 МСК:</p>
+        <p>18:50 МСК:</p>
         <p>Продолжение вещания</p>
 <!-- <div class="photo"><img src="/theme/images/Rpr29qovqzc.jpg"></div> -->
 <div class="Opros">
