--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ window.onclick = function(event) {
 
 <div class="title1">
 		<b>Прямой эфир телеканала</b><br>
-		<!-- <mark>Интернет-телеканал сейчас ничего не вещает</mark><br> -->
+		<mark>Интернет-телеканал сейчас ничего не вещает</mark><br>
 		<!-- <mark>Запись вещания:</mark> -->
 </div>
 <div class="video">
@@ -195,12 +195,8 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-		<b>Расписание на 05.10.2024</b>
-        <p>11:00 МСК:</p>
-        <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
-        <p>11:02 МСК:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>С 11:20 МСК:</p>
+		<b>Расписание на 06.10.2024</b>
+        <p>С 8:30 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 2 серия.</p>
@@ -209,16 +205,18 @@ window.onclick = function(event) {
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>13:27 МСК:</p>
+        <p>10:37 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>13:50 МСК:</p>
+        <p>11:00 МСК:</p>
         <p>- К/Ф "Карачун"</p>
+        <p>11:25 МСК:</p>
+        <p>Продолжение вещания</p>
         <p>14:15 МСК:</p>
-        <p>Продолжение вещания</p>
-        <p>18:25 МСК:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>18:50 МСК:</p>
-        <p>Продолжение вещания</p>
+        <p>"ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>15:30 МСК:</p>
+        <p>Реальность полёта <mark>По пятницам</mark></p>
+        <p>16:10 МСК:</p>
+        <p>Продолжение вещания</p></div>
 <!-- <div class="photo"><img src="/theme/images/Rpr29qovqzc.jpg"></div> -->
 <div class="Opros">
 	<!-- <iframe src="https://yandex.ru/chat#/join/0e0da34c-6352-4b74-8963-4b8d612868df/1717604674945027" width="850" height="478" allow="autoplay; encrypted-media; fullscreen; picture-in-picture;" frameborder="0" allowfullscreen></iframe> -->
