--- a/livetv.html
+++ b/livetv.html
@@ -184,18 +184,14 @@ window.onclick = function(event) {
 
 <div class='ob'>
      <h1 class='Nashi_horse'>Прямой эфир интернет-телеканала:<h1>
-     <!-- <mark>Интернет-телеканал сейчас ничего не вещает</mark> -->
+     <mark>Интернет-телеканал сейчас ничего не вещает</mark>
      <!-- <p>Запись вещания:</p> -->
      <div class="video">
           <iframe src="https://vk.ru/video_ext.php?oid=-214689242&id=456239082&autoplay=1" width="426" height="240" allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание на 05.10.2024</b>
-        <p>11:00 МСК:</p>
-        <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
-        <p>11:02 МСК:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>С 11:20 МСК:</p>
+        <b>Расписание на 06.10.2024</b>
+        <p>С 8:30 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 2 серия.</p>
@@ -204,16 +200,18 @@ window.onclick = function(event) {
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>13:27 МСК:</p>
+        <p>10:37 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>13:50 МСК:</p>
+        <p>11:00 МСК:</p>
         <p>- К/Ф "Карачун"</p>
+        <p>11:25 МСК:</p>
+        <p>Продолжение вещания</p>
         <p>14:15 МСК:</p>
-        <p>Продолжение вещания</p>
-        <p>18:25 МСК:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>18:50 МСК:</p>
-        <p>Продолжение вещания</p>
+        <p>"ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>15:30 МСК:</p>
+        <p>Реальность полёта <mark>По пятницам</mark></p>
+        <p>16:10 МСК:</p>
+        <p>Продолжение вещания</p></div>
      </div>
 </div>
   </div><!-- /.entry-content -->
