--- a/index.html
+++ b/index.html
@@ -191,12 +191,14 @@ window.onclick = function(event) {
 		<!-- <mark>Запись вещания:</mark> -->
 </div>
 <div class="video">
-	<iframe src="https://vk.ru/video_ext.php?oid=-214689242&id=456239082&autoplay=1" width="426" height="240" allow=" encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
+	<iframe src="https://vk.ru/video_ext.php?oid=-214689242&id=456239083&autoplay=1" width="426" height="240" allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
 
 </div>
 <div class="title1">
-		<b>Расписание на 06.10.2024</b>
-        <p>С 8:30 МСК:</p>
+		<b>Расписание на 07.10.2024</b>
+        <p>8:00 МСК:</p>
+        <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
+        <p>С 8:02 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 2 серия.</p>
@@ -205,18 +207,16 @@ window.onclick = function(event) {
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>10:37 МСК:</p>
+        <p>10:07 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>11:00 МСК:</p>
+        <p>10:30 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>11:25 МСК:</p>
+        <p>10:55 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>14:15 МСК:</p>
+        <p>16:05 МСК:</p>
         <p>"ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>15:30 МСК:</p>
-        <p>Реальность полёта <mark>По пятницам</mark></p>
-        <p>16:10 МСК:</p>
-        <p>Продолжение вещания</p></div>
+        <p>16:30 МСК:</p>
+        <p>Продолжение вещания</p>
 <!-- <div class="photo"><img src="/theme/images/Rpr29qovqzc.jpg"></div> -->
 <div class="Opros">
 	<!-- <iframe src="https://yandex.ru/chat#/join/0e0da34c-6352-4b74-8963-4b8d612868df/1717604674945027" width="850" height="478" allow="autoplay; encrypted-media; fullscreen; picture-in-picture;" frameborder="0" allowfullscreen></iframe> -->
