--- a/livetv.html
+++ b/livetv.html
@@ -187,11 +187,13 @@ window.onclick = function(event) {
      <mark>Интернет-телеканал сейчас ничего не вещает</mark>
      <!-- <p>Запись вещания:</p> -->
      <div class="video">
-          <iframe src="https://vk.ru/video_ext.php?oid=-214689242&id=456239082&autoplay=1" width="426" height="240" allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
+          <iframe src="https://vk.ru/video_ext.php?oid=-214689242&id=456239083&autoplay=1" width="426" height="240" allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание на 06.10.2024</b>
-        <p>С 8:30 МСК:</p>
+        <b>Расписание на 07.10.2024</b>
+        <p>8:00 МСК:</p>
+        <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
+        <p>С 8:02 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 2 серия.</p>
@@ -200,18 +202,16 @@ window.onclick = function(event) {
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>10:37 МСК:</p>
+        <p>10:07 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>11:00 МСК:</p>
+        <p>10:30 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>11:25 МСК:</p>
+        <p>10:55 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>14:15 МСК:</p>
+        <p>16:05 МСК:</p>
         <p>"ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>15:30 МСК:</p>
-        <p>Реальность полёта <mark>По пятницам</mark></p>
-        <p>16:10 МСК:</p>
-        <p>Продолжение вещания</p></div>
+        <p>16:30 МСК:</p>
+        <p>Продолжение вещания</p>
      </div>
 </div>
   </div><!-- /.entry-content -->
