--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ window.onclick = function(event) {
 
 <div class="title1">
 		<b>Прямой эфир телеканала</b><br>
-		<mark>Интернет-телеканал сейчас ничего не вещает</mark><br>
+		<!-- <mark>Интернет-телеканал сейчас ничего не вещает</mark><br> -->
 		<!-- <mark>Запись вещания:</mark> -->
 </div>
 <div class="video">
