--- a/livetv.html
+++ b/livetv.html
@@ -184,7 +184,7 @@ window.onclick = function(event) {
 
 <div class='ob'>
      <h1 class='Nashi_horse'>Прямой эфир интернет-телеканала:<h1>
-     <mark>Интернет-телеканал сейчас ничего не вещает</mark>
+     <!-- <mark>Интернет-телеканал сейчас ничего не вещает</mark> -->
      <!-- <p>Запись вещания:</p> -->
      <div class="video">
           <iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239083&hd=1" width="640" height="360" allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
