--- a/livetv.html
+++ b/livetv.html
@@ -185,29 +185,29 @@ window.onclick = function(event) {
           <iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239083&hd=1" width="640" height="360" allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание на 16.11.2024</b>
-        <p>7:00 МСК:</p>
+        <b>Расписание на 17.11.2024</b>
+        <p>10:00 МСК:</p>
         <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
-        <p>7:02 МСК:</p>
+        <p>10:02 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>С 7:20 МСК:</p>
+        <p>С 10:20 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Велопрогулка по Подмосковью - Люберцы</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>8:30 МСК:</p>
+        <p>11:30 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>8:50 МСК:</p>
+        <p>11:50 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>9:10 МСК:</p>
+        <p>12:10 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>10:15 МСК:</p>
+        <p>13:15 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>20:00 МСК:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>20:50 МСК:</p>
+        <p>18:00 МСК:</p>
+        <p>- Там, где горы встречаются с морем <mark>По пятницам</mark></p>
+        <p>18:36 МСК:</p>
         <p>Продолжение вещания</p>
    </div>
 </div>
