--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-		<b>Расписание на 06.12.2024</b>
+		<b>Расписание на 07.12.2024</b>
         <p>9:00 МСК:</p>
         <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
         <p>9:02 МСК:</p>
@@ -208,15 +208,17 @@ window.onclick = function(event) {
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
         <p>11:10 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>12:15 МСК:</p>
+        <p>12:00 МСК:</p>
+        <p>- ЗИМА на Райке and Лайке. Открытие</p>
+        <p>12:04 МСК:</p>
+        <p>"Импульс - шаг в будущее"</p>
+        <p>12:40 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>17:00 МСК:</p>
-        <p>- Там, где горы встречаются с морем <mark>По пятницам</mark></p>
-        <p>17:36 МСК:</p>
-        <p>Продолжение вещания</p>
-        <p>22:35 МСК:</p>
+        <p>19:00 МСК:</p>
+        <p>- Короткометражный фильм "Семейная связь" <mark>ПРЕМЬЕРА!</mark></p>
+        <p>22:00 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>22:55 МСК:</p>
+        <p>22:50 МСК:</p>
         <p>Продолжение вещания</p>
 <!-- <div class="photo"><img src="/theme/images/Rpr29qovqzc.jpg"></div> -->
 <div class="Opros">
